--- a/TabBarWithHomeListProfile/Controller/List/Nib/ListTableViewCell.xib
+++ b/TabBarWithHomeListProfile/Controller/List/Nib/ListTableViewCell.xib
@@ -3,21 +3,72 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="104" id="KGk-i7-Jjw" customClass="ListTableViewCell" customModule="TabBarWithHomeListProfile" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="318" height="104"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="318" height="104"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ListTableCell" rowHeight="278" id="Uyy-xp-tF1" customClass="ListTableViewCell" customModule="TabBarWithHomeListProfile" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="278"/>
+            <autoresizingMask key="autoresizingMask"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Uyy-xp-tF1" id="X0H-tM-UWG">
+                <rect key="frame" x="0.0" y="0.0" width="414" height="278"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tgn-Ts-3XE">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="278"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bha-G9-3xr">
+                                <rect key="frame" x="35" y="10" width="372.5" height="28"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="batman-4" translatesAutoresizingMaskIntoConstraints="NO" id="c1B-0c-56s">
+                                <rect key="frame" x="15" y="78" width="145" height="127.5"/>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="od1-uO-Uv7">
+                                <rect key="frame" x="176.5" y="53" width="227.5" height="208.5"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.36960277331925429" green="0.36960277331925429" blue="0.36960277331925429" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="od1-uO-Uv7" firstAttribute="width" secondItem="Tgn-Ts-3XE" secondAttribute="width" multiplier="0.55" id="0Oa-1a-q5a"/>
+                            <constraint firstItem="c1B-0c-56s" firstAttribute="height" secondItem="Tgn-Ts-3XE" secondAttribute="height" multiplier="0.46" id="0sM-gM-1we"/>
+                            <constraint firstItem="c1B-0c-56s" firstAttribute="top" secondItem="bha-G9-3xr" secondAttribute="bottom" constant="40" id="58z-Rp-n5m"/>
+                            <constraint firstItem="od1-uO-Uv7" firstAttribute="top" secondItem="bha-G9-3xr" secondAttribute="bottom" constant="15" id="9aW-mv-Gg3"/>
+                            <constraint firstItem="bha-G9-3xr" firstAttribute="width" secondItem="Tgn-Ts-3XE" secondAttribute="width" multiplier="0.9" id="GD7-rl-Gho"/>
+                            <constraint firstItem="bha-G9-3xr" firstAttribute="leading" secondItem="Tgn-Ts-3XE" secondAttribute="leading" constant="35" id="HeL-vI-FlX"/>
+                            <constraint firstAttribute="trailing" secondItem="od1-uO-Uv7" secondAttribute="trailing" constant="10" id="KYD-P5-TJG"/>
+                            <constraint firstItem="od1-uO-Uv7" firstAttribute="height" secondItem="Tgn-Ts-3XE" secondAttribute="height" multiplier="0.75" id="NUD-d0-GRa"/>
+                            <constraint firstItem="bha-G9-3xr" firstAttribute="top" secondItem="Tgn-Ts-3XE" secondAttribute="top" constant="10" id="P2j-Pq-9xn"/>
+                            <constraint firstItem="bha-G9-3xr" firstAttribute="height" secondItem="Tgn-Ts-3XE" secondAttribute="height" multiplier="0.1" id="Wgv-11-yiY"/>
+                            <constraint firstItem="c1B-0c-56s" firstAttribute="width" secondItem="Tgn-Ts-3XE" secondAttribute="width" multiplier="0.35" id="fjJ-V1-dr5"/>
+                            <constraint firstItem="c1B-0c-56s" firstAttribute="leading" secondItem="bha-G9-3xr" secondAttribute="leading" constant="-20" id="hbB-sa-FFy"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="Tgn-Ts-3XE" secondAttribute="trailing" id="Fqm-2D-Sf3"/>
+                    <constraint firstItem="Tgn-Ts-3XE" firstAttribute="leading" secondItem="X0H-tM-UWG" secondAttribute="leading" id="eTM-jJ-qzA"/>
+                    <constraint firstAttribute="bottom" secondItem="Tgn-Ts-3XE" secondAttribute="bottom" id="rIW-qC-zkC"/>
+                    <constraint firstItem="Tgn-Ts-3XE" firstAttribute="top" secondItem="X0H-tM-UWG" secondAttribute="top" id="rog-S0-THG"/>
+                </constraints>
             </tableViewCellContentView>
-            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="130.43478260869566" y="128.57142857142856"/>
+            <connections>
+                <outlet property="img" destination="c1B-0c-56s" id="duJ-cr-3lH"/>
+                <outlet property="name" destination="bha-G9-3xr" id="jGG-qS-vn5"/>
+                <outlet property="txtField" destination="od1-uO-Uv7" id="2fB-ND-qdy"/>
+            </connections>
+            <point key="canvasLocation" x="253.62318840579712" y="1.3392857142857142"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="batman-4" width="999" height="999"/>
+    </resources>
 </document>
