--- a/TabBarWithHomeListProfile/View/Base.lproj/Main.storyboard
+++ b/TabBarWithHomeListProfile/View/Base.lproj/Main.storyboard
@@ -18,20 +18,20 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="DXk-32-2wT">
                                 <rect key="frame" x="0.0" y="20" width="414" height="856"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="homeTableViewCell" rowHeight="250" id="Zep-Og-KG4" customClass="HomeTableViewCell" customModule="TabBarWithHomeListProfile" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="250"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="homeTableViewCell" rowHeight="308" id="Zep-Og-KG4" customClass="HomeTableViewCell" customModule="TabBarWithHomeListProfile" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="308"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Zep-Og-KG4" id="xZK-Ud-cKp">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="308"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="o6a-6e-V6S">
-                                                    <rect key="frame" x="20" y="11" width="374" height="228"/>
-                                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                    <rect key="frame" x="20" y="11" width="374" height="286"/>
+                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="0.29536201584507044" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="epV-Mc-Vfl">
-                                                        <size key="itemSize" width="200" height="200"/>
+                                                        <size key="itemSize" width="197" height="248"/>
                                                         <size key="estimatedItemSize" width="200" height="200"/>
                                                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -39,23 +39,23 @@
                                                     </collectionViewFlowLayout>
                                                     <cells>
                                                         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="homeCollectionViewCell" id="MDi-F9-T6o" customClass="HomeCollectionViewCell" customModule="TabBarWithHomeListProfile" customModuleProvider="target">
-                                                            <rect key="frame" x="10" y="19" width="154" height="190"/>
+                                                            <rect key="frame" x="10" y="19" width="197" height="248"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="HNg-Oz-Ulw">
-                                                                <rect key="frame" x="0.0" y="0.0" width="154" height="190"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="197" height="248"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="9it-Xn-YXA">
-                                                                        <rect key="frame" x="0.0" y="154.5" width="154" height="35.5"/>
+                                                                        <rect key="frame" x="0.0" y="190.5" width="197" height="57.5"/>
                                                                         <constraints>
-                                                                            <constraint firstAttribute="height" constant="50" id="n2S-Oe-lc3"/>
+                                                                            <constraint firstAttribute="height" constant="35" id="n2S-Oe-lc3"/>
                                                                         </constraints>
                                                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                                                        <color key="textColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                         <nil key="highlightedColor"/>
                                                                     </label>
                                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ieh-Tc-KSk">
-                                                                        <rect key="frame" x="8" y="8" width="138.5" height="138.5"/>
+                                                                        <rect key="frame" x="8" y="8" width="177.5" height="177.5"/>
                                                                         <constraints>
                                                                             <constraint firstAttribute="width" secondItem="Ieh-Tc-KSk" secondAttribute="height" multiplier="1:1" id="Lf2-rR-BkI"/>
                                                                         </constraints>
@@ -66,13 +66,13 @@
                                                                     <constraint firstAttribute="trailing" secondItem="9it-Xn-YXA" secondAttribute="trailing" id="JqU-ec-NnO"/>
                                                                     <constraint firstAttribute="bottom" secondItem="9it-Xn-YXA" secondAttribute="bottom" id="fGU-Cp-2PY"/>
                                                                     <constraint firstItem="9it-Xn-YXA" firstAttribute="leading" secondItem="HNg-Oz-Ulw" secondAttribute="leading" id="ksy-bl-Ekg"/>
-                                                                    <constraint firstItem="9it-Xn-YXA" firstAttribute="top" secondItem="Ieh-Tc-KSk" secondAttribute="bottom" constant="8" id="nhf-Dc-LoS"/>
+                                                                    <constraint firstItem="9it-Xn-YXA" firstAttribute="top" secondItem="Ieh-Tc-KSk" secondAttribute="bottom" constant="5" id="nhf-Dc-LoS"/>
                                                                     <constraint firstItem="Ieh-Tc-KSk" firstAttribute="top" secondItem="HNg-Oz-Ulw" secondAttribute="top" constant="8" id="rtf-z6-hxq"/>
                                                                     <constraint firstItem="Ieh-Tc-KSk" firstAttribute="leading" secondItem="HNg-Oz-Ulw" secondAttribute="leading" constant="8" id="sKN-Pq-fsg"/>
                                                                     <constraint firstItem="Ieh-Tc-KSk" firstAttribute="width" secondItem="HNg-Oz-Ulw" secondAttribute="width" multiplier="0.9" id="uli-E7-WlI"/>
                                                                 </constraints>
                                                             </collectionViewCellContentView>
-                                                            <size key="customSize" width="154" height="190"/>
+                                                            <size key="customSize" width="197" height="248"/>
                                                             <connections>
                                                                 <outlet property="homeCollectionImageView" destination="Ieh-Tc-KSk" id="HWS-W8-vJv"/>
                                                                 <outlet property="homeCollectionLabel" destination="9it-Xn-YXA" id="viZ-pn-7LB"/>
@@ -88,6 +88,7 @@
                                                 <constraint firstItem="o6a-6e-V6S" firstAttribute="bottom" secondItem="xZK-Ud-cKp" secondAttribute="bottomMargin" id="wFK-UV-oUg"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.33333333333333331" alpha="0.64084507042253525" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
                                             <outlet property="homeCollectionView" destination="o6a-6e-V6S" id="cGk-iM-cAu"/>
                                         </connections>
@@ -95,7 +96,7 @@
                                 </prototypes>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                         <constraints>
                             <constraint firstItem="DXk-32-2wT" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" symbolic="YES" id="Rsh-r7-AMh"/>
                             <constraint firstItem="DXk-32-2wT" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="S3I-9m-cH4"/>
@@ -111,7 +112,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1057" y="138"/>
+            <point key="canvasLocation" x="-1057.9710144927537" y="137.94642857142856"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="64Y-Nh-4NR">
@@ -126,7 +127,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="0c0-tD-dRv"/>
-                        <segue destination="5bC-p7-9Vo" kind="relationship" relationship="viewControllers" id="aBx-N3-NWM"/>
+                        <segue destination="cK4-GW-SxN" kind="relationship" relationship="viewControllers" id="aBx-N3-NWM"/>
                         <segue destination="nut-KY-kSW" kind="relationship" relationship="viewControllers" id="Kwu-7p-wI3"/>
                     </connections>
                 </tabBarController>
@@ -150,7 +151,7 @@
             </objects>
             <point key="canvasLocation" x="138" y="-1420"/>
         </scene>
-        <!--List-->
+        <!--list of SUPERHEROs-->
         <scene sceneID="4X0-3B-pIa">
             <objects>
                 <viewController storyboardIdentifier="ListViewController" id="5bC-p7-9Vo" customClass="ListViewController" customModule="TabBarWithHomeListProfile" customModuleProvider="target" sceneMemberID="viewController">
@@ -172,15 +173,14 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="w03-7V-Sly"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="List" image="list.bullet.below.rectangle" catalog="system" id="WgR-Bd-kD4"/>
-                    <navigationItem key="navigationItem" id="6ZG-lj-ViC"/>
+                    <navigationItem key="navigationItem" title="list of SUPERHEROs" id="6ZG-lj-ViC"/>
                     <connections>
-                        <outlet property="listTableView" destination="dlz-Ox-bdU" id="hYp-jX-Iit"/>
+                        <outlet property="listTableView" destination="dlz-Ox-bdU" id="lie-1j-Zqd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W7d-ol-bcO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="138" y="160"/>
+            <point key="canvasLocation" x="1047.8260869565217" y="159.375"/>
         </scene>
         <!--Profile-->
         <scene sceneID="7MJ-Hz-d94">
@@ -197,7 +197,26 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MGK-Hn-171" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1297" y="138"/>
+            <point key="canvasLocation" x="2205.7971014492755" y="137.94642857142856"/>
+        </scene>
+        <!--List-->
+        <scene sceneID="xL7-AE-ijM">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cK4-GW-SxN" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="List" image="list.bullet.below.rectangle" catalog="system" id="WgR-Bd-kD4"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="XTR-1l-rl2">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="5bC-p7-9Vo" kind="relationship" relationship="rootViewController" id="2yL-V3-hTR"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8HY-sm-7yl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="159.375"/>
         </scene>
     </scenes>
     <resources>
